--- a/ps-02/index.html
+++ b/ps-02/index.html
@@ -10,9 +10,9 @@
             <h2><em>ps-02</em></h2>
             <h3><em>09-27-16</em></h3>
             <ul>
-              <li><a href="2016-SWC/ps-02/A">A. Profile</a></li>
-              <li><a href="2016-SWC/ps-02/B">B. Squares</a></li>
-              <li><a href="2016-SWC/ps-02/loud">C. Quiet and loud</li>
+              <li><a href="2016-SWC/ps-02/A.html">A. Profile</a></li>
+              <li><a href="2016-SWC/ps-02/B.html">B. Squares</a></li>
+              <li><a href="2016-SWC/ps-02/loud.html">C. Quiet and loud</li>
             </ul>
       </div>
     </body>
