--- a/ps-02/B.html
+++ b/ps-02/B.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
   <html>
     <head>
-    <title>SWC ps-02/squares</title>
+    <title>SWC ps-02/B</title>
     </head>
-      <body style="background-color: black">
-        <center><div style="background-color: yellow; height: 200px; width: 200px"></center>
+      <body style="background-color: gray">
+        <center><div style="background-color: black; height: 200px; width: 200px"></center>
         </div>
-        <center><div style="background-color: blue; height: 400px; width: 400px"></center>
+        <center><div style="background-color: black; height: 400px; width: 400px"></center>
         </div>
-        <center><div style="background-color: red; height: 600px; width: 600px"></center>
+        <center><div style="background-color: black; height: 600px; width: 600px"></center>
         </div>
       </body>
   </html>
