--- a/ps-02/B.html
+++ b/ps-02/B.html
@@ -5,10 +5,13 @@
     </head>
       <body style="background-color: gray">
         <center><div style="background-color: black; height: 200px; width: 200px"></center>
+
         </div>
-        <center><div style="background-color: white; height: 400px; width: 400px"></center>
+        <center><div style="background-color: black; height: 400px; width: 400px"></center>
+
         </div>
         <center><div style="background-color: black; height: 600px; width: 600px"></center>
+
         </div>
       </body>
   </html>
