--- a/ps-02/B.html
+++ b/ps-02/B.html
@@ -4,14 +4,11 @@
     <title>SWC ps-02/B</title>
     </head>
       <body style="background-color: gray">
-        <center><div style="background-color: black; height: 200px; width: 200px"></center>
-
+        <center><div style="background-color: black; height: 200px; width: 200px; margin: 10px"></center>
         </div>
-        <center><div style="background-color: black; height: 400px; width: 400px"></center>
-
+        <center><div style="background-color: black; height: 400px; width: 400px; margin: 10px"></center>
         </div>
-        <center><div style="background-color: black; height: 600px; width: 600px"></center>
-
+        <center><div style="background-color: black; height: 600px; width: 600px; margin: 10px"></center>
         </div>
       </body>
   </html>
