--- a/ps-04/33 lines.html
+++ b/ps-04/33 lines.html
@@ -6,14 +6,16 @@
    <link rel="stylesheet" href="stylesheet.css" type="text/css">
  </head>
 
- <body style="background-color: Gainsboro">
-   <canvas id="canvas" width="500" height="500"></canvas>
- </body>
+ <body style="background-color: Gainsboro"></body>
 <p><a href="index.html"><h4 style="color: gray; font-family; align-items: right: Lucida Console">Back to home</h4></a></p>
 
+<div class="content">
+        <center><h1 style="Font-family: Lucida Console; color: gray">33 lines</h1></center>
+         <canvas id="canvas1" width="400" height="400"></canvas>
+       
+ </div>
 
-
-
+<script type="text/javascript" src="33.js"></script>
 
 
 
