--- a/ps-04/333 lines.html
+++ b/ps-04/333 lines.html
@@ -7,15 +7,18 @@
  </head>
 
  <body style="background-color: Gainsboro">
-   <canvas id="canvas" width="500" height="500"></canvas>
+>
  </body>
 <p><a href="index.html"><h4 style="color: gray; font-family; align-items: right: Lucida Console">Back to home</h4></a></p>
 
 
+<div class="content">
+        <center><h1 style="Font-family: Lucida Console; color: gray">333 lines</h1></center>
+         <canvas id="canvas1" width="500" height="500"></canvas>
+       
+ </div>
 
-
-
-
+<script type="text/javascript" src="333.js"></script>
 
 
 
