--- a/ps-04/index.html
+++ b/ps-04/index.html
@@ -20,8 +20,10 @@
       <center><em><h2 style="font-family: Lucida Console; color: gray">10/10/16</center></em></h2>
       <center><em><h3= style="font-family: Lucida Console; color: gray">ps-04</center></em></h3>
 
-      <a href="broken grid.html"><center><em><h4 style="font-size: 15px; color: gray; font-family: Lucida Console">-Broken grid</center></em></h4></a>
+      <a href="bg.html"><center><em><h4 style="font-size: 15px; color: gray; font-family: Lucida Console">-Broken grid</center></em></h4></a>
       <a href="33 lines.html"><center><em><h4 style="font-size: 15px; color: gray; font-family: Lucida Console">-33 lines</center></em></h4></a>
       <a href="333 lines.html"><center><em><h4 style="font-size: 15px; color: gray; font-family: Lucida Console">-333 lines</center></em></h4></a>
+
+      <a href="../ps-05/index.html"><em><h4 style="font-size: 10px; color: gray; font-family: Lucida Console">Back to ps-05</em></h4></a>
     </body>
   </html>
