--- a/ps-07/instruments.html
+++ b/ps-07/instruments.html
@@ -17,7 +17,7 @@
   <br>
     <body>
       <center><canvas id="canvas" width="500" height="500"></canvas></center>
-      <center><div id="mouseInfo">Instrument</div><center>
+      <center><div id="mouseInfo"></div><center>
       <br>
       <a href="../ps-07/index.html">-Home</center></a>
       <script type="text/javascript" src="instruments.js"></script>
