--- a/ps-11/proposal.html
+++ b/ps-11/proposal.html
@@ -10,6 +10,6 @@
   <a href="https://bsutherl2.github.io/2016-SWC/ps-07/"><h3>PS-07</h3>
   <a href="https://bsutherl2.github.io/2016-SWC/ps-08/"><h3>PS-08</h3>
   <a href="https://bsutherl2.github.io/2016-SWC/ps-04/"><h3>PS-04</h3>
-  <a href="index.html"><h3>PS-10/11</h3>
+  <a href="https://bsutherl2.github.io/2016-SWC/ps-10/"><h3>PS-10/11</h3>
   <center><a href="index.html">Home</a></center>
 </body>
