--- a/ps-11/graph.html
+++ b/ps-11/graph.html
@@ -24,5 +24,5 @@
   <br>
   LAL = Los Angeles Lakers (NBA) 16 titles
   <br>
-  *Tie(2) = Green Bay Packers (NFL) and Toronto Maple Leafs (NHL) titles<h4>
+  *Tie(2) = Green Bay Packers (NFL) and Toronto Maple Leafs (NHL)13 titles</h4>
 </body>
