--- a/ps-11/graph.html
+++ b/ps-11/graph.html
@@ -25,4 +25,5 @@
   LAL = Los Angeles Lakers (NBA) 16 titles
   <br>
   *Tie(2) = Green Bay Packers (NFL) and Toronto Maple Leafs (NHL)13 titles</h4>
+  <h2>*Data courtesy of <em>Bleacher Report</em></h2>
 </body>
