--- a/ps-11/graph.html
+++ b/ps-11/graph.html
@@ -16,7 +16,7 @@
 <br>
 <br>
   <h2>-Legend-</h2>
-  <h4>NYY = New York Yankes (MLB) 27 titles
+  <h4>NYY = New York Yankees (MLB) 27 titles
     <br>
   MON = Montreal Canadiens (NHL) 24 titles
   <br>
