--- a/ps-13/index.html
+++ b/ps-13/index.html
@@ -1,34 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  <title>Final project</title>
-  <link type="text/css" rel="stylesheet" href="stylesheet.css">
-  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-      <div id="text">
-      <h1>Brooks Sutherland</h1>
-      <h2>12/02/16</em></h2>
-      <h3>Final project</h3>
-      </div>
-      <center><a href="mlb.html">-D3 bar graphs</a></center>
-      <body>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
+<head>
+  <!-- Plotly.js -->
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+</head>
 
-    </body>
-  </html>
+<body>
+
+  <div id="myDiv" style="width: 480px; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>
+<script src="map.js" charset="utf-8"></script>
+
+</body>
