--- a/ps-13/mlb.html
+++ b/ps-13/mlb.html
@@ -20,7 +20,7 @@
 <body>
 	<div id="wrapper">
 	</div>
-	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script>
 		var categories= ['','New York Yankees','St. Louis Cardinals', 'Boston Red Sox', 'New York Giants(MLB)', 'Philadelphia Athletics', 'Pittsburgh Pirates','Los Angeles Dodgers','Cincinnati Reds','Detroit Tigers','Oakland Athletics'];
 
