--- a/ps-13/nfl.html
+++ b/ps-13/nfl.html
@@ -20,7 +20,7 @@
 <body>
 	<div id="wrapper">
 	</div>
-	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script>
 		var categories= ['','Pittsburgh Steelers','San Francisco 49ers', 'Dallas Cowboys', 'Green Bay Packers', 'New England Patriots', 'New York Giants(NFL)','LA/Oakland Raiders','Washington Redskins','Denver Broncos','Baltimore/Indy Colts','Miami Dolphins','Baltimore Ravens'];
 
