--- a/ps-13/nhl.html
+++ b/ps-13/nhl.html
@@ -20,7 +20,7 @@
 <body>
 	<div id="wrapper">
 	</div>
-	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script>
 		var categories= ['','Montreal Canadiens','Toronto Maple Leafs', 'Detroit Red Wings', 'Boston Bruins', 'Chicago Blackhawks', 'Edmonton Oilers'];
 
