--- a/ps-12/nba.html
+++ b/ps-12/nba.html
@@ -20,7 +20,7 @@
 <body>
 	<div id="wrapper">
 	</div>
-	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script>
 		var categories= ['','Boston Celtics','Los Angeles Lakers', 'Chicago Bulls', 'San Antonio Spurs', 'Golden State Warriors'];
 
