--- a/ps-12/nhl.html
+++ b/ps-12/nhl.html
@@ -128,5 +128,6 @@
         <a href="index.html"><li>Home</li></a>
     </ul>
 </div>
+<h4>*data courtesy of Bleacher Report</h4>
 <div class="chart"></div>
 </html>
